NM-5823 fixing location filters

--- a/app/views/search/mixed.html.haml
+++ b/app/views/search/mixed.html.haml
@@ -77,7 +77,7 @@
         - if @transactable_type.search_price_types_filter
           = render partial: 'search/mixed/filter', locals: { header_name: 'Pricing', selected_values: @searcher.search.lgpricing_filters || [], input_name: 'listing_pricing[]', options: @searcher.filterable_pricing }
         - if @searcher.transactable_type.display_location_type_filter?
-          = render :partial => 'search/mixed/filter', :locals => { :header_name => 'Location Type', :selected_values => @searcher.search.lntypes_filters || [], :input_name => 'location_types_ids[]', :options => @searcher.filterable_location_types.map { |lt| [lt.id, lt.name ] } }
+          = render :partial => 'search/mixed/filter', :locals => { :header_name => 'Location Type', :selected_values => @searcher.search.location_types_ids || [], :input_name => 'location_types_ids[]', :options => @searcher.filterable_location_types.map { |lt| [lt.id, lt.name ] } }
 
 
         - if @transactable_type.show_price_slider
