--- a/lib/tasks/litvault/liquid_views/search--list_cases.liquid
+++ b/lib/tasks/litvault/liquid_views/search--list_cases.liquid
@@ -1,156 +1,164 @@
 <section class="search-form-wrapper">
+  <div class="container-fluid">
     <div class="search-form-inner">
-        <div class="search-form-type-toggle">
-            <h2><span class="struct-label">Current search type:</span> <span class="current-type" tabindex="0">Case Search</span></h2>
-            <h3 class="struct-label">Change search type to:</h3>
+      <div class="search-form-type-toggle">
+        <h2>
+          <span class="struct-label">Current search type:</span>
+          <span class="current-type" tabindex="0">Case Search</span>
+        </h2>
+        <h3 class="struct-label">Change search type to:</h3>
+        <ul>
+          <li class="selected">
+            <a href="/search?transactable_type_id={{ searcher.transactable_types.first.id }}&amp;transactable_type_class=TransactableType">Case Search</a>
+          </li>
+          <li>
+            <a href="/search/people">People Search</a>
+          </li>
+        </ul>
+      </div>
+      <form action="/search" method="get" class="search-form">
+        <div class="fields">
+          <input type="hidden" name="transactable_type_class" value="TransactableType">
+          <input type="hidden" name="category_ids" value="{{ searcher.category_ids }}">
+          <input type="hidden" name="per_page" value="{{ searcher.per_page }}">
+          <input type="hidden" name="page" value="{{ searcher.current_page }}" id="input-page">
+          <input type="hidden" name="query_fields" value="tags">
+          <input type="hidden" name="sort">
+
+          <div class="query-field">
+            <label for="field-q" class="struct-label">Search keyword</label>
+            <input type="text" name="query" id="field-q" placeholder="Enter keywords&hellip;" value="{{ params.query }}">
+          </div>
+
+          <div class="state-filter">
+            <label for="field-state" class="struct-label">Filter by state</label>
+            <span class="select-a">
+              <select name="lg_custom_attributes[state][]" id="field-state" class="unstyled-select">
+                <option value="">By State</option>
+                {% for ca in platform_context.transactable_types.first.custom_attributes %}
+                  {% for value in ca.valid_values %}
+                    <option value='{{ value }}' {% if value == searcher.lg_custom_attributes_hash['state'].first %} selected {% endif %}>{{ value }}</option>
+                  {% endfor %}
+                {% endfor %}
+              </select>
+            </span>
+          </div>
+
+          <fieldset class="type-filter">
+            <legend class="struct-label">Case type</legend>
+
             <ul>
-                <li class="selected"><a href="/search?transactable_type_id={{ searcher.transactable_types.first.id }}&amp;transactable_type_class=TransactableType">Case Search</a></li>
-                <li><a href="/search/people">People Search</a></li>
+              {% for transactable_type in platform_context.transactable_types %}
+                {% assign zero = params.transactable_type_id | minus: transactable_type.id %}
+                <li>
+                  <input type="radio" name="transactable_type_id" value="{{ transactable_type.id }}" id="transactable-type-{{ transactable_type.id }}" {% if zero == 0 %} checked {% endif %}>
+                  <label for="transactable-type-{{ transactable_type.id }}">{{ transactable_type.name }}</label>
+                </li>
+              {% endfor %}
             </ul>
+          </fieldset>
         </div>
-        <form action="/search" method="get" class="search-form">
-            <div class="fields">
-                <input type="hidden" name="transactable_type_class" value="TransactableType">
-                <input type="hidden" name="category_ids" value="{{ searcher.category_ids }}">
-                <input type="hidden" name="per_page" value="{{ searcher.per_page }}">
-                <input type="hidden" name="page" value="{{ searcher.current_page }}" id="input-page">
-                <input type="hidden" name="query_fields" value="tags">
-                <input type="hidden" name="sort">
 
-                <div class="query-field">
-                    <label for="field-q" class="struct-label">Search keyword</label>
-                    <input type="text" name="query" id="field-q" placeholder="Enter keywords&hellip;" value="{{ params.query }}">
-                </div>
-                <div class="state-filter">
-                    <label for="field-state" class="struct-label">Filter by state</label>
-                    <span class="select-a">
-                        <select name="lg_custom_attributes[state][]" id="field-state" class="unstyled-select">
-                            <option value="">By State</option>
-                            {% for ca in platform_context.transactable_types.first.custom_attributes %}
-                                {% for value in ca.valid_values %}
-                                    <option value='{{ value }}' {% if value == searcher.lg_custom_attributes_hash['state'].first %} selected {% endif %}>{{ value }}</option>
-                                {% endfor %}
-                            {% endfor %}
-                        </select>
-                    </span>
-                </div>
-                <fieldset class="type-filter">
-                    <legend class="struct-label">Case type</legend>
+        <div class="form-action">
+          <button type="submit" class="button-a">Search</button>
+        </div>
 
-                    <ul>
-                        {% for transactable_type in platform_context.transactable_types %}
-                            {% assign zero = params.transactable_type_id | minus: transactable_type.id %}
-                            <li>
-                                <input type="radio" name="transactable_type_id" value="{{ transactable_type.id }}" id="transactable-type-{{ transactable_type.id }}" {% if zero == 0 %} checked {% endif %}>
-                                <label for="transactable-type-{{ transactable_type.id }}">{{ transactable_type.name }}</label>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </fieldset>
-            </div>
-            <div class="form-action">
-                <button type="submit" class="button-a">Search</button>
-            </div>
-        </form>
+      </form>
     </div>
+  </div>
 </section>
 
 <div class="search-results-wrapper">
+  <div class="container-fluid">
     <section class="search-results">
-        <div class="search-results-query-info">
-            <span class="results-count"><b>{{ searcher.result_count }}</b> Result(s) Found</span>
-            {% if searcher.result_count > 0 %}
-            <div class="search-sort-form">
-                <div>
-                    <label for="search-order">Sort by:</label>
-                    <span class="select-a">
-                        <select id="search-order" name="sort" class="unstyled-select">
-                            <option {% if params['sort'] == 'created_at desc'  %}selected{% endif %} value='created_at desc'>Newest</option>
-                            <option {% if params['sort'] == 'created_at asc' %}selected{% endif %} value='created_at asc'>Oldest</option>
-                        </select>
-                    </span>
-                </div>
-            </div>
-            {% endif %}
+      <div class="search-results-query-info">
+        <span class="results-count"><b>{{ searcher.result_count }}</b> Result(s) Found</span>
+        {% if searcher.result_count > 0 %}
+        <div class="search-sort-form">
+          <div>
+            <label for="search-order">Sort by:</label>
+            <span class="select-a">
+              <select id="search-order" name="sort" class="unstyled-select">
+                <option {% if params['sort'] == 'created_at desc'  %}selected{% endif %} value='created_at desc'>Newest</option>
+                <option {% if params['sort'] == 'created_at asc' %}selected{% endif %} value='created_at asc'>Oldest</option>
+              </select>
+            </span>
+          </div>
         </div>
-
-        <div class="search-results-items">
-            {% for case in searcher.results %}
-                <article class="case-a" id="case-{{ case.id }}">
-
-                    <header class="search-result-header">
-
-                        {% assign collaborator = current_user | find_collaborator: case %}
-                        {% if collaborator.approved_by_owner? or current_user.id == listing.creator_id %}
-                          <h3><a href="{{ case.url }}">{{ case.name }}</a></h3>
-                        {% else %}
-                          <h3><a href="#case-permission-request-{{ case.id }}" data-case-invite-trigger>{{ case.name }}</a></h3>
-                        {% endif %}
-
-                        <div class="search-result-meta-action">
-                            <a href="./" class="button-b">Bid on Case</a>
-                            <p class="meta">
-                                <span class="publish-date">posted 10 days ago</span>
-                                |
-                                <span class="favorite">
-                                    {% include 'shared/components/wish_list_button_injection.html', object: case %}
-                                </span>
-                            </p>
-                        </div>
-                    </header>
-
-                    <ul class="search-result-case-properties">
-                        <li>Car</li>
-                        <li>Injury or Accident Date: <b>12/2/2015</b></li>
-                        <li>Location of Injury or Accident: <b>Missouri</b></li>
-                        <li>Days of Hospitalization: <b>5</b></li>
-                        <li>Death Case: <b>No</b></li>
-                    </ul>
-
-                    {% if case.properties.description != blank %}
-                        <div class="search-result-description">
-                        {% if case.properties.description.size > 350 %}
-                           <div data-shorten-description>
-                            <p data-description>{{ case.properties.description | slice: 0, 350 | nl2br }}<span class="show_more_container">...<a class="show_more_link"> show more</a></span></p>
-                            <div style='display: none;'  class="rest_of_text">{{ case.properties.description | slice: 350, case.properties.description.size | nl2br }}</div>
-                          </div>
-                        {% else %}
-                          <p>{{ case.properties.description }}</p>
-                        {% endif %}
-                        </div>
-                    {% endif %}
-
-                    <p>Posted by <a href="{{ case.owner.url }}">{{ case.owner.company }}</a></p>
-
-                    {% if user.tags.size > 0 %}
-                    <div class="tags-a tags-short-list">
-                      <h4>Tags</h4>
-                      <ul>
-                          {% for tag in user.tags %}
-                              <li><a href="?query_fields=tags&amp;query={{ tag.name }}">{{ tag.name }}</a></li>
-                          {% endfor %}
-                      </ul>
-                    </div>
-                    {% endif %}
-                  </div>
-
-                  <div class="case-invite modal" id="case-permission-request-{{ case.id }}" data-collaborations-url="{{ case.url }}"></div>
-              </article>
-
-              <script>
-                $(function(){
-                  $(document).trigger('caseLoaded.litvault', 'case-{{case.id}}')
-                });
-              </script>
-          {% endfor %}
-        </div>
-
-        {% if searcher.next_page %}
-            <p class="search-results-more-trigger">
-                <button type="button" class="button-a" data-page='{{ searcher.next_page }}'>More Results</button>
-            </p>
         {% endif %}
-    </section>
+      </div>
 
+      <div class="search-results-items">
+        {% for case in searcher.results %}
+
+        <article class="case-a search-result" id="case-{{ case.id }}">
+
+          <header class="search-result-header">
+            {% assign collaborator = current_user | find_collaborator: case %}
+            {% if collaborator.approved_by_owner? or current_user.id == case.creator_id %}
+              <h3><a href="{{ case.url }}">{{ case.name }}</a></h3>
+            {% else %}
+              <h3><a href="#case-permission-request-{{ case.id }}" data-case-invite-trigger>{{ case.name }}</a></h3>
+            {% endif %}
+
+            <div class="search-result-meta-action">
+              <button type="button" class="button-a inverted">Bid on Case</button>
+
+              <div class="meta">
+                <span class="publish-date">posted {{ case.created_at | timeago }}</span>
+                |
+                {% include 'shared/components/wish_list_button_injection.html', object: case %}
+              </div>
+            </div>
+          </header>
+
+          <ul class="search-result-case-properties">
+            {% include 'search/case_properties', case: case %}
+          </ul>
+
+          {% if case.properties.case_short_description != blank %}
+            <div class="search-result-description">
+              {% if case.properties.case_short_description.size > 350 %}
+                <div data-shorten-description>
+                  <p data-description>{{ case.properties.case_short_description | slice: 0, 350 | nl2br }}<span class="show_more_container">...<a class="show_more_link"> show more</a></span></p>
+                  <div style='display: none;'  class="rest_of_text">{{ case.properties.case_short_description | slice: 350, case.properties.case_short_description.size | nl2br }}</div>
+                </div>
+              {% else %}
+              <p>{{ case.properties.case_short_description }}</p>
+              {% endif %}
+            </div>
+          {% endif %}
+
+          <p>Posted by <a href="{{ case.company.url }}" target="_blank" rel="nofollow">{{ case.creator.company_name }}</a></p>
+
+          {% if case.tags.size > 0 %}
+          <div class="tags-a tags-short-list">
+            <h4>Tags</h4>
+            <ul>
+              {% for tag in case.tags %}
+              <li><a href="?query_fields=tags&amp;query={{ tag.name }}">{{ tag.name }}</a></li>
+              {% endfor %}
+            </ul>
+          </div>
+          {% endif %}
+
+          <div class="case-invite modal" id="case-permission-request-{{ case.id }}" data-collaborations-url="{{ case.url }}"></div>
+        </article>
+
+        <script>
+          $(function(){
+            $(document).trigger('caseLoaded.litvault', 'case-{{case.id}}');
+          });
+        </script>
+        {% endfor %}
+      </div>
+
+      {% if searcher.next_page %}
+        <p class="search-results-more-trigger">
+          <button type="button" class="button-a" data-page='{{ searcher.next_page }}'>More Results</button>
+        </p>
+      {% endif %}
+    </section>
     {% include 'search/filter_categories' %}
+  </div>
 </div>
