--- a/app/views/shared/javascripts/_footer.html.haml
+++ b/app/views/shared/javascripts/_footer.html.haml
@@ -6,7 +6,7 @@
   = javascript_i18n_include_tag
 
 - if defined? googlemaps
-  = javascript_include_tag '//maps.googleapis.com/maps/api/js?libraries=places'
+  = javascript_include_tag google_maps_api_url(:js, libraries: :places)
 
 = webpack_manifest_script
 = webpack_bundle_tag 'common'
