--- a/lib/tasks/litvault/liquid_views/dashboard--company--transactables--orders.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard--company--transactables--orders.liquid
@@ -22,15 +22,6 @@ partial: false
     {{ i18n_title }}
     <span class='hidden-xs'>&gt; {{ current_status | humanize }}</span>
   </h1>
-
-  {% if is_lister == "true" %}
-    <div class='options visible-sm visible-xs'>
-      <a href='{{ transactable_type.new_transactable_path }}' class='btn btn-primary'>
-        <span class='fa fa-plus'></span>
-        {{ 'dashboard.items.new_listing_short' | translate }}
-      </a>
-    </div>
-  {% endif %}
 {% endcontent_for %}
 
 {% assign form_url = transactable_type.transactable_types_path %}
@@ -60,25 +51,22 @@ partial: false
           </div>
         {% endform_for %}
       </div>
-
-      {% if current_user.has_seller_profile? %}
-      <p class="find-expert-link"><a href="/search" class="btn btn-primary">Find an Expert</a></p>
-      {% endif %}
   </div>
 {% endif %}
 
 {% assign filter_params = "&amp;filter[properties][workplace_type]=" | append: params.filter.properties.workplace_type | append: "&amp;order_by=" | append: params.order_by %}
 
-{% if is_lister == 'true' %}
-  {% content_for 'panel_options' %}
-  <div class='pull-right options {% if transactables.size > 0 %} additional-listing-options {% endif %}'>
-    <a href='/create-a-new-case?nolayout=1' class='btn btn-primary navbar-btn' data-modal="true" data-modal-class="new-case-dialog">
-      <span class='fa fa-plus'></span>
-      {{ 'dashboard.items.new_listing_full' | translate: type: transactable_type.bookable_noun_plural }}
-    </a>
-  </div>
-  {% endcontent_for %}
-{% endif %}
+{% content_for 'panel_navigation_links' %}
+    <li class='{{ 'pending' | active_class:current_status }}'>
+      <a href='{{ tt.transactable_types_path | append: "?status=pending" }}'>Pending Cases ({{ pending_transactables | total_entries }})</a>
+    </li>
+    <li class='{{ 'in progress' | active_class:current_status }}'>
+      <a href='{{ tt.transactable_types_path | append: "?status=in+progress" }}'>Cases In Progress ({{ in_progress_transactables | total_entries }})</a>
+    </li>
+    <li class='{{ 'archived' | active_class:current_status }}'>
+      <a href='{{ tt.transactable_types_path | append: "?status=archived" }}'>Archived Cases ({{ archived_transactables | total_entries }})</a>
+    </li>
+{% endcontent_for %}
 
 <nav class='panel-nav'>
   <ul class='tabs pull-left'>
