--- a/app/community_views/listings/_show_about.html.haml
+++ b/app/community_views/listings/_show_about.html.haml
@@ -1,7 +1,7 @@
 - if @transactable.description.present?
   %h4
     = t :description
-  = simple_format auto_link(@transactable.description)
+  = videoify_and_parse_with_markdown(@transactable.description)
 
 - if @transactable.photos.except_cover.any?
   %h4= t :gallery
