NM-5875 Extend markdown support - activity feed

--- a/app/community_views/shared/_transactable.html.haml
+++ b/app/community_views/shared/_transactable.html.haml
@@ -29,4 +29,4 @@
         = link_to user_path(transactable.creator) do
           = image_tag transactable.creator.avatar.url(:thumb), width: 30, height: 30
           = transactable.creator.decorate.name_with_affiliation
-      %p= custom_sanitze transactable.description.truncate(100)
+      %p= custom_sanitze transactable.properties.try(:summary).to_s.truncate(100)
