--- a/app/community_views/shared/_activity_status_body.html.haml
+++ b/app/community_views/shared/_activity_status_body.html.haml
@@ -26,7 +26,7 @@
       %section
         %h3.hx= title if title.present?
         - if body.present?
-          - if event.is_text_update?
+          - if event.is_text_update? || event.event.to_sym == :user_created_transactable
             = videoify_and_parse_with_markdown(body)
           - else
             = simple_format auto_link(body, html: { target: '_blank', ref: 'nofollow' })
