--- a/lib/tasks/volte/content_holders/body_bottom.liquid
+++ b/lib/tasks/volte/content_holders/body_bottom.liquid
@@ -3,7 +3,13 @@ name: Body End
 inject_pages: any_page
 position: body_bottom
 ---
-<script src="https://rawgit.com/mdyd-dev/marketplaces/master/volte-webpack/dist/app.js" async></script>
+
+{% if platform_context.rails_env == 'development' %}
+  <script src="http://localhost:8080/app.js" async></script>
+{% else %}
+  <script src="https://rawgit.com/mdyd-dev/marketplaces/master/volte-webpack/dist/app.js" async></script>
+{% endif %}
+
 <script>
   function showCustomAttributes(attribute){
     $('[data-visibility-dependent]').hide().attr('disabled', true)
@@ -14,10 +20,4 @@ position: body_bottom
   $('[data-show-field]').on('change', function(){ showCustomAttributes($(this))});
 
   $('[data-show-field]').each(function(){showCustomAttributes($(this));});
-
-  // Remove google maps API since its not used
-  $(function() {
-    return document.querySelectorAll('script[src*="maps.googleapis.com"]').forEach(function(v, i) { v.parentNode.removeChild(v) });
-  });
-
 </script>
