--- a/lib/tasks/volte/liquid_views/listings--show.liquid
+++ b/lib/tasks/volte/liquid_views/listings--show.liquid
@@ -16,9 +16,9 @@
           <ul>
             <li>
               {% if listing.transactable_user_messages.size > 0 %}
-                <a class="button button-inverse"" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: listing.transactable_user_messages.first.id, skip: true }}">Message</a>
+                <a class="button button-inverse"" data-modal="true" data-href="{{ 'dashboard_user_message_path' | generate_url: listing.transactable_user_messages.first.id, skip: true }}">Message</a>
               {% else %}
-                <a class="button button-inverse"" data-modal="true" href="{{ 'new_listing_user_message_path' | generate_url: listing.id ,user_id: listing.creator.id, skip: true }}">Message</a>
+                <a class="button button-inverse"" data-modal="true" data-href="{{ 'new_listing_user_message_path' | generate_url: listing.id ,user_id: listing.creator.id, skip: true }}">Message</a>
               {% endif %}
             </li>
             <li><a href="{{ listing.creator.user_profile_url }}" class="button button-inverse">Lender's Closet</a></li>
@@ -51,22 +51,22 @@
     <div class="image-gallery" data-image-gallery>
       <div class="image-gallery__container">
       {% if photos_count > 0 %}
-        <div class="image-gallery__container-image" style="background-image: url('{{ photos[0].golden  }}')" data-image-gallery-full-image></div>
+        <div class="image-gallery__container-image" style="background-image: url('{{ photos[0].original  }}'); background-size: 100%;" data-image-gallery-full-image></div>
       {% endif %}
       </div>
 
       <div class="image-gallery__controls-container">
         <ul class="image-gallery__zoom-controls">
-          <li><a href="#" data-image-gallery-zoom="1">X</a></li>
-          <li><a href="#" data-image-gallery-zoom="+1">+</a></li>
-          <li><a href="#" data-image-gallery-zoom="-1">&ndash;</a></li>
+          <li><a href="#" data-image-gallery-zoom="1"><i class="fa fa-arrows-alt" aria-hidden="true"></i></a></li>
+          <li><a href="#" data-image-gallery-zoom="+1"><i class="fa fa-plus" aria-hidden="true"></i></a></li>
+          <li><a href="#" data-image-gallery-zoom="-1"><i class="fa fa-minus" aria-hidden="true"></i></a></li>
         </ul>
 
           {% if photos_count > 0 %}
           <ul class="image-gallery__list">
             {% assign index = 0 %}
             {% for photo in photos %}
-              <li data-image-gallery-image><a href="#"><img src="{{ photo.golden }}" data-image-gallery-full-image-url="{{ photo.golden }}" /></a></li>
+              <li data-image-gallery-image><a href="#"><img src="{{ photo.space_listing }}" data-image-gallery-full-image-url="{{ photo.original }}" /></a></li>
             {% endfor %}
           </ul>
           {% endif %}
@@ -85,7 +85,7 @@
             <input value="{{ listing.action_type.pricings.first.id }}" type="hidden" name="order[transactable_pricing_id]" id="order_transactable_pricing_id">
             <input type="submit" class="button button-default" value="REQUEST ITEM">
           </form>
-        <li><a data-unavailable-periods="{{ listing.unavailable_periods }}" class="button button-default button-disabled">CHECK AVAILABILITY</a></li>
+        <li><a data-listing-availability-toggle data-listing-availability-periods={{ listing.unavailable_periods }} class="button button-default datetimepicker"><input type="hidden" />CHECK AVAILABILITY</a></li>
         <li>
           <div data-add-favorite-button="true" data-path="{{ listing.wish_list_path }}" data-wishlistable-type="{{ listing.class_name }}" data-link-to-classes="button button-default" data-path-bulk="{{ listing.wish_list_bulk_path }}" data-object-id="{{ listing.id }}" id="favorite-button-{{ listing.class_name }}-{{ listing.id }}">
             <div class="text-center"><img src="{{ 'components/modal/loader.gif' | image_url }}" /></div>
@@ -105,28 +105,30 @@
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="tab-details">
-          <dt>Item:</dt> <dd>{{ listing.properties.item_type }}</dd>
-          {% if listing.properties.item_type == 'Dress' %}
-            <dt>Style:</dt> <dd>{{ listing.properties.item_style_dress }}</dd>
-            <dt>Size:</dt> <dd>{{ listing.properties.dress_size }}</dd>
-            <dt>Length:</dt> <dd>{{ listing.properties.dress_length }}</dd>
-          {% elsif listing.properties.item_type == 'Bag' %}
-            <dt>Style:</dt> <dd>{{ listing.properties.item_style_bag }}</dd>
-            <dt>Length:</dt> <dd>{{ listing.properties.dress_length }}</dd>
-          {% elsif listing.properties.item_type == 'Millinery' %}
-            <dt>Style:</dt> <dd>{{ listing.properties.item_style_milinery }}</dd>
-            <dt>Size:</dt> <dd>{{ listing.properties.milinery_size }}</dd>
-          {% elsif listing.properties.item_type == 'Outerwear' %}
-            <dt>Style:</dt> <dd>{{ listing.properties.item_style_outerwear}}</dd>
-            <dt>Size:</dt> <dd>{{ listing.properties.outerwear_size }}</dd>
-          {% elsif listing.properties.item_type == 'Accessories' %}
-            <dt>Style:</dt> <dd>{{ listing.properties.item_style_accessories }}</dd>
-          {% endif %}
-          <dt>Color:</dt> <dd>{{ listing.properties.color }}</dd>
-          <dt>Designer:</dt> <dd>{{ listing.properties.designer_name }}</dd>
-          <dt>Location:</dt> <dd>{{ listing.location.city }}, {{ listing.location.state }}</dd>
-          <dt>Retail Value:</dt>  <dd>{{ listing.properties.retail_value }}</dd>
-          <dt>Dry Cleaning:</dt>  <dd>{{ listing.properties.dry_cleaning }}</dd>
+          <dl>
+            <dt>Item:</dt> <dd>{{ listing.properties.item_type }}</dd>
+            {% if listing.properties.item_type == 'Dress' %}
+              <dt>Style:</dt> <dd>{{ listing.properties.item_style_dress }}</dd>
+              <dt>Size:</dt> <dd>{{ listing.properties.dress_size }}</dd>
+              <dt>Length:</dt> <dd>{{ listing.properties.dress_length }}</dd>
+            {% elsif listing.properties.item_type == 'Bag' %}
+              <dt>Style:</dt> <dd>{{ listing.properties.item_style_bag }}</dd>
+              <dt>Length:</dt> <dd>{{ listing.properties.dress_length }}</dd>
+            {% elsif listing.properties.item_type == 'Millinery' %}
+              <dt>Style:</dt> <dd>{{ listing.properties.item_style_milinery }}</dd>
+              <dt>Size:</dt> <dd>{{ listing.properties.milinery_size }}</dd>
+            {% elsif listing.properties.item_type == 'Outerwear' %}
+              <dt>Style:</dt> <dd>{{ listing.properties.item_style_outerwear}}</dd>
+              <dt>Size:</dt> <dd>{{ listing.properties.outerwear_size }}</dd>
+            {% elsif listing.properties.item_type == 'Accessories' %}
+              <dt>Style:</dt> <dd>{{ listing.properties.item_style_accessories }}</dd>
+            {% endif %}
+            <dt>Color:</dt> <dd>{{ listing.properties.color }}</dd>
+            <dt>Designer:</dt> <dd>{{ listing.properties.designer_name }}</dd>
+            <dt>Location:</dt> <dd>{{ listing.location.city }}, {{ listing.location.state }}</dd>
+            <dt>Retail Value:</dt>  <dd>{{ listing.properties.retail_value }}</dd>
+            <dt>Dry Cleaning:</dt>  <dd>{{ listing.properties.dry_cleaning }}</dd>
+          </dl>
         </div>
         <div class="tab-pane" id="tab-description">
           <p>
@@ -137,17 +139,18 @@
     </div> <!-- Item details -->
   </div> <!-- Item sidebar -->
 
-  <div class="item-tags">
+  <div class="item-tags" data-item-tags>
     <h4>Tags:</h4>
     <ul>
       {% for tag in listing.tags %}
-        {% if forloop.index < 5 %}
+        {% if forloop.index <= 5 %}
           <li><a href="#" class="button button-inverse">{{ tag.name }}</a></li>
         {% else %}
-          <li><a href="#" class="button button-inverse" style="display: none;">{{ tag.name }}</a></li>
+          <li class="item-tags__hide" data-item-tags-hidden><a href="#" class="button button-inverse">{{ tag.name }}</a></li>
         {% endif %}
-        {% if forloop.index == 5 %}
-          <li><a href="#" class="button button-inverse item-tags__view-more">view more</a></li>
+
+        {% if forloop.index == listing.tags.size %}
+          <li class="item-tags__view-more" data-item-tags-toggle><a href="#" class="button button-inverse">view more</a></li>
         {% endif %}
       {% endfor %}
     </ul>
