--- a/lib/tasks/litvault/liquid_views/dashboard--user_reservations--reservation_details.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard--user_reservations--reservation_details.liquid
@@ -15,14 +15,14 @@
   <div class="col-sm-6" style="text-align: right">Death Case: N</div>
 </div>
 
-{% if transactable.description != blank %}
+{% if transactable.properties.case_short_description != blank %}
     <h4>Description:</h4>
-    {% if transactable.description.size > 350 %}
+    {% if transactable.properties.case_short_description.size > 350 %}
        <div data-shorten-description>
-        <p data-description>{{ transactable.description | slice: 0, 350 | nl2br }}<span class="show_more_container">...<a class="show_more_link"> show more</a></span></p>
-        <div style='display: none;'  class="rest_of_text">{{ transactable.description | slice: 350, transactable.description.size | nl2br }}</div>
+        <p data-description>{{ transactable.properties.case_short_description | slice: 0, 350 | nl2br }}<span class="show_more_container">...<a class="show_more_link"> show more</a></span></p>
+        <div style='display: none;'  class="rest_of_text">{{ transactable.properties.case_short_description | slice: 350, transactable.properties.case_short_description.size | nl2br }}</div>
       </div>
     {% else %}
-      <p>{{ transactable.description | nl2br }}</p>
+      <p>{{ transactable.properties.case_short_description | nl2br }}</p>
     {% endif %}
 {% endif %}
