--- a/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_lister_view.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_lister_view.liquid
@@ -15,100 +15,100 @@
       {% include 'dashboard/user_reservations/reservation_details', reservation: reservation, for_host: true %}
     </div>
 
+    {% assign transactable_collaborators = transactable.transactable_collaborators %}
+
+    {% if transactable_collaborators != empty %}
+      <h3>Request To View Case Details:</h3>
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Handling Lawyer:</th>
+              <th>Date:</th>
+              <th>Status:</th>
+              <th>Action:</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for transactable_collaborator in transactable_collaborators %}
+              <tr>
+                <td>{{ transactable_collaborator.user.name }}</td>
+                <td>{{ transactable_collaborator.created_at | to_date | l: 'short' }}</td>
+                <td>{{ transactable_collaborator.status }}</td>
+                <td>
+                  {% if transactable_collaborator.transactable_user_messages.size > 0 %}
+                    <a class="btn btn-info" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: transactable_collaborator.transactable_user_messages.first.id, skip: true }}">Reply</a>
+                  {% else %}
+                    <a class="btn btn-info" data-modal="true" href="{{ 'new_listing_user_message_path' | generate_url: transactable.id ,user_id: transactable_collaborator.user.id, skip: true }}">Reply</a>
+                  {% endif %}
+
+                  {{ transactable_collaborator.user.click_to_call_button }}
+
+                  {% if transactable_collaborator.status != 'Approved' %}
+                      {% form_for transactable_collaborator, url: @transactable_collaborator.update_path, method: 'put', remote: true %}
+                        <input type='hidden' name='transactable_collaborator[approved_by_owner_at]' value='{{ "now" | parse_time }}'>
+                        <input type='hidden' name='transactable_collaborator[rejected_by_owner_at]' value=''>
+                        <input type='submit' class="btn btn-danger" data-confirm="Are you sure?" value='Accept'>
+                      {% endform_for %}
+                  {% endif %}
+
+                  {% if transactable_collaborator.status != 'Rejected' %}
+                    {% form_for transactable_collaborator, url: @transactable_collaborator.update_path, method: 'put', remote: true %}
+                      <input type='hidden' name='transactable_collaborator[rejected_by_owner_at]' value='{{ "now" | parse_time }}'>
+                      <input type='submit' class="btn btn-danger" data-confirm="Are you sure?" value='Reject'>
+                    {% endform_for %}
+                  {% endif %}
+
+                </td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    {% endif %}
+
     {% if current_status == "pending" %}
-      {% if params.action == 'orders' %}
-        {% assign orders = transactable.orders %}
-        {% if orders != empty  %}
-          <h3>Offers ({{ orders.size }})</h3>
-          <div class="table-responsive">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Handling Lawyer:</th>
-                  <th>Offer Date:</th>
-                  <th>Offer Status:</th>
-                  <th>Offer Action:</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for order in orders %}
-                  <tr>
-                    <td>{{ order.user.name }}</td>
-                    <td>{{ order.created_at | to_date | l: 'short' }}</td>
-                    <td>{{ 'reservations.states.' | append: order.state | t }}</td>
-                    <td>
-                      {% if order.unconfirmed? %}
-                        <a href="{{ order.payment_documents[0].file_url }}" target="_blank" class="btn btn-info">Review</a>
-                        <a href="{{ order.rejection_form_path }}" data-modal="true" class="btn btn-danger">Reject</a>
-                        <a href="{{ 'new_dashboard_company_orders_received_payment_path' | generate_url: orders_received_id: order.id }}" class="btn btn-success" data-modal="true">Accept</a>
-                      {% endif %}
-                    </td>
-                  </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
-        {% endif %}
 
-        <hr>
-        <div class="row">
-          <div class="col-md-3 pull-right">
-            {% include 'dashboard/company/transactables/lister_actions.html' %}
-          </div>
+      {% assign orders = transactable.line_item_orders %}
+
+      {% if orders != empty  %}
+        <h3>Offers ({{ orders.size }})</h3>
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Handling Lawyer:</th>
+                <th>Offer Date:</th>
+                <th>Offer Status:</th>
+                <th>Offer Action:</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for order in orders %}
+                <tr>
+                  <td>{{ order.user.name }}</td>
+                  <td>{{ order.created_at | to_date | l: 'short' }}</td>
+                  <td>{{ 'reservations.states.' | append: order.state | t }}</td>
+                  <td>
+                    {% if order.unconfirmed? %}
+                      <a href="{{ order.payment_documents[0].file_url }}" target="_blank" class="btn btn-info">Review</a>
+                      <a href="{{ order.rejection_form_path }}" data-modal="true" class="btn btn-danger">Reject</a>
+                      <a href="{{ 'new_dashboard_company_orders_received_payment_path' | generate_url: orders_received_id: order.id }}" class="btn btn-success" data-modal="true">Accept</a>
+                    {% endif %}
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
-
-      {% else %}
-        {% assign transactable_collaborators = transactable.transactable_collaborators %}
-        {% if transactable_collaborators != empty %}
-          <h3>Request To View Case Details:</h3>
-          <div class="table-responsive">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Handling Lawyer:</th>
-                  <th>Date:</th>
-                  <th>Status:</th>
-                  <th>Action:</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for transactable_collaborator in transactable_collaborators %}
-                  <tr>
-                    <td>{{ transactable_collaborator.user.name }}</td>
-                    <td>{{ transactable_collaborator.created_at | to_date | l: 'short' }}</td>
-                    <td>{{ transactable_collaborator.status }}</td>
-                    <td>
-                      {% if transactable_collaborator.transactable_user_messages.size > 0 %}
-                        <a class="btn btn-info" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: transactable_collaborator.transactable_user_messages.first.id, skip: true }}">Reply</a>
-                      {% else %}
-                        <a class="btn btn-info" data-modal="true" href="{{ 'new_listing_user_message_path' | generate_url: transactable.id ,user_id: transactable_collaborator.user.id, skip: true }}">Reply</a>
-                      {% endif %}
-
-                      {{ transactable_collaborator.user.click_to_call_button }}
-
-                      {% if transactable_collaborator.status != 'Approved' %}
-                          {% form_for transactable_collaborator, url: @transactable_collaborator.update_path, method: 'put', remote: true %}
-                            <input type='hidden' name='transactable_collaborator[approved_by_owner_at]' value='{{ "now" | parse_time }}'>
-                            <input type='hidden' name='transactable_collaborator[rejected_by_owner_at]' value=''>
-                            <input type='submit' class="btn btn-danger" data-confirm="Are you sure?" value='Accept'>
-                          {% endform_for %}
-                      {% endif %}
-
-                      {% if transactable_collaborator.status != 'Rejected' %}
-                        {% form_for transactable_collaborator, url: @transactable_collaborator.update_path, method: 'put', remote: true %}
-                          <input type='hidden' name='transactable_collaborator[rejected_by_owner_at]' value='{{ "now" | parse_time }}'>
-                          <input type='submit' class="btn btn-danger" data-confirm="Are you sure?" value='Reject'>
-                        {% endform_for %}
-                      {% endif %}
-
-                    </td>
-                  </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
-        {% endif %}
       {% endif %}
+
+      <hr>
+      <div class="row">
+        <div class="col-md-3 pull-right">
+          {% include 'dashboard/company/transactables/lister_actions.html' %}
+        </div>
+      </div>
 
 
     {% elsif current_status == "in progress" or current_status == "archived" and accepted_order != blank %}
