litvault fix minor issues while testing

--- a/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_lister_view.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_lister_view.liquid
@@ -125,7 +125,7 @@
           </thead>
           <tbody>
             <tr>
-              <td>{{ order.user.name }}</td>
+              <td>{{ accepted_order.user.name }}</td>
               <td>{{ accepted_order.created_at | to_date | l: 'short' }}</td>
               <td>Accepted</td>
               <td>{{ accepted_order.confirmed_at | to_date | l: 'short' }}</td>
