--- a/lib/tasks/litvault/liquid_views/dashboard/company/transactables/index.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/company/transactables/index.liquid
@@ -38,11 +38,11 @@
         {% form_for :transactable, url: @form_url, method: 'get', form_for_type: 'dashboard' %}
           <input type="hidden" name="status" value="{{ current_status }}">
           <div class="form-group">
-            <label for="filter-properties-workplace" class="control-label">Workplace</label>
-            <select id="filter-properties-workplace" name="filter[properties][workplace_type]" data-allow-empty-option="true">
+            <label for="filter-properties-workplace" class="control-label">Case Type</label>
+            <select id="filter-properties-workplace" name="transactable_type_id" data-allow-empty-option="true">
               <option value="">Any</option>
-              <option value="Online" {% if params.filter.properties.workplace_type == 'Online' %}selected{% endif%}>Online</option>
-              <option value="On Site" {% if params.filter.properties.workplace_type == 'On Site' %}selected{% endif%}>On Site</option>
+                <option value='768' {% if params.transactable_type_id == '768' %}selected{% endif%}>Individual Case</option>
+                <option value='769' {% if params.transactable_type_id == '769' %}selected{% endif%}>Group Case</option>
             </select>
           </div>
           <div class="form-group">
@@ -59,7 +59,7 @@
       </div>
 
       {% if current_user.has_seller_profile? %}
-      <p class="find-expert-link"><a href="/search" class="btn btn-primary">Find an Expert</a></p>
+      <p class="find-expert-link"><a href="/search/people" class="btn btn-primary">Find Handling Lawyer</a></p>
       {% endif %}
   </div>
 {% endif %}
